# VulkanProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: VulkanProject.vcxproj  compile.bat  compileShader.bat  grid.vert  triangle.vert  workbench.frag  workbench.vert
shaders/compiled/: compiled.bat  grid.vert.spv  workbench.frag.spv  workbench.vert.spv
src/: main.cpp
src/components/: CoreComponents.h
src/core/: Application.cpp  Application.h  CallbackData.h  Camera.cpp  Camera.h  CameraController.h  Command.h  Editor.cpp  Editor.h  Event.h  Inputmanager.cpp  Inputmanager.h  OrbitController.h  Selection.h  Window.cpp  Window.h
src/render/: GraphicsPipeline.cpp  GraphicsPipeline.h  Grid.cpp  Grid.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  UniformBuffer.cpp  UniformBuffer.h  VulkanContext.cpp  VulkanContext.h
src/ui/: Core.h  Renderer.cpp  Renderer.h  Theme.h  UI.cpp  UI.h  Widgets.cpp  Widgets.h
src/world/: ComponentStorage.h  Primitives.h  RelationshipStore.h  Types.h  World.cpp  World.h
